--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,9 +160,9 @@ exec_always --no-startup-id wal -R
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q sset Master 3%+ #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 3%- #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id amixer -q sset Master toggle # mute sound
 
 # Media player controls
 bindsym XF86AudioPlay exec playerctl play
