--- a/.config/i3/config
+++ b/.config/i3/config
@@ -159,7 +159,11 @@ exec_always --no-startup-id wal -R
 # Execute polybar on launch. Script kills current ones on i3 refresh, otherwise they duplicate
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-# Pulse Audio controls
+# Screen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10
+
+# Alsa controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q sset Master 3%+ #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q sset Master 3%- #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id amixer -q sset Master toggle # mute sound
