--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,5 +1,6 @@
 # Set modifier key to alt
 set $mod Mod4
+set $wallpaper $HOME/images/wallpaper1.png
 
 font pango:Overpass Regular 8
 
@@ -160,8 +161,8 @@ exec_always --no-startup-id wal -R
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 # i3lock
-bindsym $mod+0 exec i3lock -i /home/joklost/images/wallpaper1.png -e
-bindsym $mod+Shift+0 exec i3lock -i /home/joklost/images/wallpaper1.png -e && systemctl hibernate
+bindsym $mod+0 exec i3lock -i $wallpaper -e
+bindsym $mod+Shift+0 exec i3lock -i $wallpaper -e && systemctl hibernate
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 10
